--- a/Mineria/.project
+++ b/Mineria/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MineriaMinashi</name>
+	<name>Mineria</name>
 	<comment></comment>
 	<projects>
 	</projects>
