--- a/.classpath
+++ b/.classpath
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="src" path="Mineria/src"/>
-	<classpathentry kind="lib" path="C:/Users/agust/Documents/GitHub/MineriaMinashi/Mineria/mysql-connector-java-5.1.13.jar">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Alumno/Downloads/MineriaMinashi-main/Mineria/mysql-connector-java-5.1.13.jar"/>
 	<classpathentry kind="output" path="Mineria/bin"/>
 </classpath>
