--- a/.classpath
+++ b/.classpath
@@ -11,7 +11,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/aldan/OneDrive/Documentos/GitHub/MineriaMinashi/MineriaMinashi/MineriaMinashi/Mineria/mysql-connector-java-5.1.13.jar"/>
-	<classpathentry kind="lib" path="C:/Users/aldan/OneDrive/Escritorio/jcalendar-1.4/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/agust/Downloads/mysql-connector-java-5.1.13.jar/mysql-connector-java-5.1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/agust/Downloads/jcalendar-1.4/jcalendar-1.4.jar"/>
 	<classpathentry kind="output" path="Mineria/bin"/>
 </classpath>
